# ogu-python-pandas

./: .gitignore  .quartoignore  LICENSE  README.md  _publish.yml  _quarto.yml  index.qmd  pyproject.toml  styles.css
.devcontainer/: devcontainer.json
pages/: income.qmd  keiki.qmd
pages/csv/: 2_income.csv  keiki_ci.csv
