[project]
name = "ogu-python-pandas"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "matplotlib-fontja>=1.1.0",
    "numpy>=2.3.1",
    "pandas>=2.3.1",
    "pyyaml>=6.0.2",
    "statsmodels>=0.14.5",
]
